feat: ajustando routes com ModelBase, e criando modulo de authenticação
