# backend/public/swagger.json
@@ -12,6 +12,14 @@
 					"id": {
 						"type": "string"
 					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
+					},
 					"name": {
 						"type": "string"
 					},
@@ -23,22 +31,14 @@
 							"$ref": "#/components/schemas/Area"
 						},
 						"type": "array"
-					},
-					"createdAt": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"updatedAt": {
-						"type": "string",
-						"format": "date-time"
 					}
 				},
 				"required": [
 					"id",
-					"name",
-					"address",
 					"createdAt",
-					"updatedAt"
+					"updatedAt",
+					"name",
+					"address"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -47,6 +47,14 @@
 				"properties": {
 					"id": {
 						"type": "string"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
 					},
 					"name": {
 						"type": "string"
@@ -65,23 +73,15 @@
 							"$ref": "#/components/schemas/Equipment"
 						},
 						"type": "array"
-					},
-					"createdAt": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"updatedAt": {
-						"type": "string",
-						"format": "date-time"
 					}
 				},
 				"required": [
 					"id",
+					"createdAt",
+					"updatedAt",
 					"name",
 					"locationDescription",
-					"plantId",
-					"createdAt",
-					"updatedAt"
+					"plantId"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -99,6 +99,14 @@
 				"properties": {
 					"id": {
 						"type": "string"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
 					},
 					"name": {
 						"type": "string"
@@ -124,25 +132,17 @@
 							"$ref": "#/components/schemas/Part"
 						},
 						"type": "array"
-					},
-					"createdAt": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"updatedAt": {
-						"type": "string",
-						"format": "date-time"
 					}
 				},
 				"required": [
 					"id",
+					"createdAt",
+					"updatedAt",
 					"name",
 					"manufacturer",
 					"serialNumber",
 					"initialOperationsDate",
-					"areaId",
-					"createdAt",
-					"updatedAt"
+					"areaId"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -151,6 +151,14 @@
 				"properties": {
 					"id": {
 						"type": "string"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
 					},
 					"name": {
 						"type": "string"
@@ -173,26 +181,18 @@
 					},
 					"equipmentId": {
 						"type": "string"
-					},
-					"createdAt": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"updatedAt": {
-						"type": "string",
-						"format": "date-time"
 					}
 				},
 				"required": [
 					"id",
+					"createdAt",
+					"updatedAt",
 					"name",
 					"type",
 					"manufacturer",
 					"serialNumber",
 					"installationDate",
-					"equipmentId",
-					"createdAt",
-					"updatedAt"
+					"equipmentId"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -365,6 +365,84 @@
 				},
 				"type": "object",
 				"description": "Make all properties in T optional"
+			},
+			"User": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"name": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"id",
+					"createdAt",
+					"updatedAt",
+					"name",
+					"email",
+					"password"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Pick_User.Exclude_keyofUser.id-or-createdAt-or-updatedAt__": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"name",
+					"email",
+					"password"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_User.id-or-createdAt-or-updatedAt_": {
+				"$ref": "#/components/schemas/Pick_User.Exclude_keyofUser.id-or-createdAt-or-updatedAt__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"Pick_User.Exclude_keyofUser.id-or-createdAt-or-updatedAt-or-name__": {
+				"properties": {
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"email",
+					"password"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_User.id-or-createdAt-or-updatedAt-or-name_": {
+				"$ref": "#/components/schemas/Pick_User.Exclude_keyofUser.id-or-createdAt-or-updatedAt-or-name__",
+				"description": "Construct a type with the properties of T except for those in type K."
 			},
 			"Pick_Area.name-or-locationDescription-or-plantId_": {
 				"properties": {
@@ -849,6 +927,108 @@
 						}
 					}
 				]
+			}
+		},
+		"/auth/token-validate": {
+			"get": {
+				"operationId": "ValidateToken",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "boolean"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Auth"
+				],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
+				"parameters": []
+			}
+		},
+		"/auth/register": {
+			"post": {
+				"operationId": "Register",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/User"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Auth"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/Omit_User.id-or-createdAt-or-updatedAt_"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/auth/login": {
+			"post": {
+				"operationId": "Login",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"user": {
+											"$ref": "#/components/schemas/User"
+										},
+										"token": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"user",
+										"token"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Auth"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/Omit_User.id-or-createdAt-or-updatedAt-or-name_"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/areas": {
