# backend/src/models/User.ts
@@ -5,11 +5,11 @@ import { ModelBase } from './ModelBase';
 @Entity()
 export class User extends ModelBase {
     @Column({ type: 'varchar', length: 100, nullable: false })
-    name: string;
+    name!: string;
 
     @Column({ type: 'varchar', length: 100, unique: true })
-    email: string;
+    email!: string;
 
     @Column({ type: 'varchar', length: 255 })
-    password: string;
+    password!: string;
 }
